--- a/task5.html
+++ b/task5.html
@@ -30,7 +30,7 @@
         <td>
           <img
             src="https://media.istockphoto.com/id/856599656/photo/passport-picture-of-a-smiling-turkish-businesswoman.jpg?s=612x612&w=0&k=20&c=dgETy-9neViQs7SATDTOOa80QOhVFcLIomBFRxWVN_8="
-            style="width: 60px"
+            style="width: 60px; height: 60px"
             alt="Fatma Photo"
           />
         </td>
@@ -49,7 +49,7 @@
           <img
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRw398MJqmRS3vcw5x0fvoAP4YX8zxVbv4DEw&usqp=CAU"
             alt="Ahmed Photo"
-            style="width: 60px"
+            style="width: 60px; height: 60px"
           />
         </td>
         <td>
@@ -67,7 +67,7 @@
           <img
             src="https://ylpapp.isb.edu/user/Passport_photo_samples/Sample-6---wrong.jpg"
             alt="Sayed photo"
-            style="width: 60px"
+            style="width: 60px; height: 60px"
           />
         </td>
         <td>
